<resources>
    <string name="app_name">Obd2cloud</string>

    <string name="sign_in_title">Obd2cloud</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile_image">profile image</string>
    <string name="profile_default_name">User</string>
    <string name="profile_default_mail">username@example.com</string>

    <string name="sync">Synchronization</string>
    <string name="sync_on">Sync enabled</string>
    <string name="sync_off">Sync disabled</string>

    <string name="bt_devices">Bluetooth devices</string>
    <string name="bt_need_to_enable">Bluetooth needs to be enabled</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_feedback">Feedback</string>
    <string name="menu_section_support">Support</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_statistics">Statistics</string>
    <string name="main_summary_title">Summary</string>
</resources>
