<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_statistics"
            android:title="@string/menu_item_statistics" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_item_settings" />
    </group>

    <item android:title="@string/menu_section_support">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/menu_item_help" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/menu_item_feedback" />
        </menu>
    </item>

</menu>
